--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Welcome to Reaksmey Arun Developer Page</h1>
   <p>This is the official page for my apps on Google Play.</p>
-  <p>Featured App: <a href="https://play.google.com/store/apps/details?id=com.kh.reaksmeyarun.developer.safefolderx&hl=en-US&ah=vWNkqRFFQ1QGkTEqataPHnK67Xg" target="_blank">Safe Gallery - Photo Vault</a></p>
+  <p>Featured App: <a href="https://play.google.com/store/apps/details?id=com.kh.reaksmeyarun.developer.gallerypro" target="_blank">Gallery - Photo Gallery</a></p>
 </body>
 </html>
